[OCB] Copy+Update CWAgent's `awsapplicationsignals` into the `processor/` directory (#247)
* copy appsignals processor with zero changes

* rename package directory to awsapplicationsignalsprocessor

* update dependency locations, remove CWAgent dependencies and copied non-existent dependencies, update go.mod and run go mod tidy

* run common make commands, update license check for appsignals

* fix data races in tests and cardinality control

* fix linting

* update README

--- a/.github/ISSUE_TEMPLATE/unmaintained.yaml
+++ b/.github/ISSUE_TEMPLATE/unmaintained.yaml
@@ -153,6 +153,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
+      - processor/awsapplicationsignals
       - processor/cumulativetodelta
       - processor/deltatocumulative
       - processor/deltatorate
