--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -161,6 +161,7 @@ pkg/translator/zipkin/                                              @open-teleme
 pkg/winperfcounters/                                                @open-telemetry/collector-contrib-approvers @dashpole @Mrod1598 @BinaryFissionGames @alxbl
 
 processor/attributesprocessor/                                      @open-telemetry/collector-contrib-approvers @boostchicken
+processor/awsapplicationsignalsprocessor/                           @open-telemetry/collector-contrib-approvers @mxiamxia @jj22ee
 processor/cumulativetodeltaprocessor/                               @open-telemetry/collector-contrib-approvers @TylerHelmuth
 processor/deltatocumulativeprocessor/                               @open-telemetry/collector-contrib-approvers @sh0rez @RichieSams @jpkrohling
 processor/deltatorateprocessor/                                     @open-telemetry/collector-contrib-approvers @Aneurysm9
