--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -148,6 +148,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
+      - processor/awsapplicationsignals
       - processor/cumulativetodelta
       - processor/deltatocumulative
       - processor/deltatorate
