--- a/.github/ISSUE_TEMPLATE/other.yaml
+++ b/.github/ISSUE_TEMPLATE/other.yaml
@@ -148,6 +148,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
+      - processor/awsapplicationsignals
       - processor/cumulativetodelta
       - processor/deltatocumulative
       - processor/deltatorate
