--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -168,7 +168,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
-      - processor/coralogix
+      - processor/awsapplicationsignals
       - processor/cumulativetodelta
       - processor/deltatocumulative
       - processor/deltatorate
