--- a/.github/ISSUE_TEMPLATE/unmaintained.yaml
+++ b/.github/ISSUE_TEMPLATE/unmaintained.yaml
@@ -167,7 +167,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
-      - processor/coralogix
+      - processor/awsapplicationsignals
       - processor/cumulativetodelta
       - processor/deltatocumulative
       - processor/deltatorate
