--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -174,6 +174,7 @@ pkg/translator/zipkin/                            @open-telemetry/collector-cont
 pkg/winperfcounters/                              @open-telemetry/collector-contrib-approvers @dashpole @Mrod1598 @alxbl @pjanotti
 
 processor/attributesprocessor/                    @open-telemetry/collector-contrib-approvers @boostchicken
+processor/awsapplicationsignalsprocessor/         @open-telemetry/collector-contrib-approvers @mxiamxia @jj22ee
 processor/coralogixprocessor/                     @open-telemetry/collector-contrib-approvers @crobert-1 @galrose
 processor/cumulativetodeltaprocessor/             @open-telemetry/collector-contrib-approvers @TylerHelmuth
 processor/deltatocumulativeprocessor/             @open-telemetry/collector-contrib-approvers @sh0rez @RichieSams
