--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -168,6 +168,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
+      - processor/awsapplicationsignals
       - processor/coralogix
       - processor/cumulativetodelta
       - processor/deltatocumulative
