--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -162,6 +162,7 @@ body:
       - pkg/translator/zipkin
       - pkg/winperfcounters
       - processor/attributes
+      - processor/awsapplicationsignals
       - processor/coralogix
       - processor/cumulativetodelta
       - processor/deltatocumulative
