--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -212,10 +212,11 @@ jobs:
         run: |
           make -j2 goporto
           git diff --exit-code || (echo 'Porto links are out of date, please run "make goporto" and commit the changes in this PR.' && exit 1)
-      - name: crosslink
-        run: |
-          make crosslink
-          git diff --exit-code || (echo 'Replace statements are out of date, please run "make crosslink" and commit the changes in this PR.' && exit 1)
+      # Disable crosslink as some of the "replace" statements are removed to reduce conflicts as OCB components may depend on different OTel dependency versions
+      # - name: crosslink
+      #   run: |
+      #     make crosslink
+      #     git diff --exit-code || (echo 'Replace statements are out of date, please run "make crosslink" and commit the changes in this PR.' && exit 1)
       - name: Check for go mod dependency changes
         run: |
           make gotidy
