--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -68,23 +68,23 @@ jobs:
           - windows
           - linux
         group:
-          # - receiver-0
-          # - receiver-1
-          # - receiver-2
-          # - receiver-3
-          # - processor-0
-          # - processor-1
-          # - exporter-0
-          # - exporter-1
-          # - exporter-2
-          # - exporter-3
-          # - extension
-          # - connector
+          - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
           - internal
-          # - pkg
-          # - cmd-0
-          # - cmd-1
-          # - other
+          - pkg
+          - cmd-0
+          - cmd-1
+          - other
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
