--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,9 +2,7 @@ name: build-and-test
 on:
   workflow_dispatch:
   push:
-    branches: [main]
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
+
   merge_group:
   pull_request:
 env:
@@ -45,25 +43,25 @@ jobs:
       - name: Install Tools
         if: steps.go-cache.outputs.cache-hit != 'true'
         run: make install-tools
-  check-collector-module-version:
-    runs-on: ubuntu-latest
-    needs: [setup-environment]
-    steps:
-      - uses: actions/checkout@v4
-      - run: make genotelcontribcol
-      - name: Check Collector Module Version
-        run: ./.github/workflows/scripts/check-collector-module-version.sh
-  check-codeowners:
-    runs-on: ubuntu-latest
-    needs: [setup-environment]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Check Code Owner Existence
-        run: ./.github/workflows/scripts/check-codeowners.sh check_code_owner_existence
-      - name: Check Component Existence
-        run: ./.github/workflows/scripts/check-codeowners.sh check_component_existence
-      - name: Validate Allowlist entries
-        run: ./.github/workflows/scripts/check-codeowners.sh check_entries_in_allowlist
+  # check-collector-module-version:
+  #   runs-on: ubuntu-latest
+  #   needs: [setup-environment]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - run: make genotelcontribcol
+  #     - name: Check Collector Module Version
+  #       run: ./.github/workflows/scripts/check-collector-module-version.sh
+  # check-codeowners:
+  #   runs-on: ubuntu-latest
+  #   needs: [setup-environment]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Check Code Owner Existence
+  #       run: ./.github/workflows/scripts/check-codeowners.sh check_code_owner_existence
+  #     - name: Check Component Existence
+  #       run: ./.github/workflows/scripts/check-codeowners.sh check_component_existence
+  #     - name: Validate Allowlist entries
+  #       run: ./.github/workflows/scripts/check-codeowners.sh check_entries_in_allowlist
   lint-matrix:
     strategy:
       fail-fast: false
@@ -136,52 +134,52 @@ jobs:
             echo "One or more matrix jobs failed."
             false
           fi
-  govulncheck:
-    strategy:
-      fail-fast: false
-      matrix:
-        group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
-          - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.22.12"
-          cache: false
-      - name: Cache Go
-        id: go-cache
-        timeout-minutes: 5
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/go/bin
-            ~/go/pkg/mod
-            ./.tools
-          key: go-cache-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
-      - name: Install Tools
-        if: steps.go-cache.outputs.cache-hit != 'true'
-        run: make install-tools
-      - name: Run `govulncheck`
-        run: make -j2 gogovulncheck GROUP=${{ matrix.group }}
+  # govulncheck:
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       group:
+  #         - receiver-0
+  #         - receiver-1
+  #         - receiver-2
+  #         - receiver-3
+  #         - processor-0
+  #         - processor-1
+  #         - exporter-0
+  #         - exporter-1
+  #         - exporter-2
+  #         - exporter-3
+  #         - extension
+  #         - connector
+  #         - internal
+  #         - pkg
+  #         - cmd-0
+  #         - cmd-1
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   steps:
+  #     - name: Checkout Repo
+  #       uses: actions/checkout@v4
+  #     - name: Setup Go
+  #       uses: actions/setup-go@v5
+  #       with:
+  #         go-version: "1.22.12"
+  #         cache: false
+  #     - name: Cache Go
+  #       id: go-cache
+  #       timeout-minutes: 5
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/go/bin
+  #           ~/go/pkg/mod
+  #           ./.tools
+  #         key: go-cache-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
+  #     - name: Install Tools
+  #       if: steps.go-cache.outputs.cache-hit != 'true'
+  #       run: make install-tools
+  #     - name: Run `govulncheck`
+  #       run: make -j2 gogovulncheck GROUP=${{ matrix.group }}
   checks:
     runs-on: ubuntu-latest
     needs: [setup-environment]
