--- a/.golangci.yml
+++ b/.golangci.yml
@@ -138,7 +138,6 @@ linters:
     - depguard
     - errcheck
     - errorlint
-    - exportloopref
     - exhaustive
     - gci
     - gocritic
@@ -165,5 +164,8 @@ issues:
       linters:
         - gosec
     - text: "G402:"
+      linters:
+        - gosec
+    - text: "G115:"
       linters:
         - gosec
