--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -93,7 +93,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -162,7 +162,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -185,7 +185,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -195,6 +195,7 @@ jobs:
           path: |
             ~/go/bin
             ~/go/pkg/mod
+            ./.tools
           key: go-cache-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
       - name: Install dependencies
         if: steps.go-cache.outputs.cache-hit != 'true'
@@ -255,7 +256,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.22.5", "1.21.11"] # 1.20 is interpreted as 1.2 without quotes
+        go-version: ["1.23.6"] # 1.20 is interpreted as 1.2 without quotes
         runner: [ubuntu-latest]
         group:
           - receiver-0
@@ -365,13 +366,14 @@ jobs:
           - pkg
           - cmd-0
           - cmd-1
+
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -409,7 +411,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -435,7 +437,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -505,7 +507,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -606,7 +608,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22.5"
+          go-version: "1.23.6"
           cache: false
       - name: Mkdir bin and dist
         run: |
