--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -71,6 +71,22 @@ jobs:
           - linux
         group:
           - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
+          - other
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
@@ -123,6 +139,21 @@ jobs:
       matrix:
         group:
           - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -228,6 +259,22 @@ jobs:
         runner: [ubuntu-latest]
         group:
           - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
+          - other
     runs-on: ${{ matrix.runner }}
     needs: [setup-environment]
     steps:
@@ -303,6 +350,21 @@ jobs:
       matrix:
         group:
           - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
