--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -68,23 +68,23 @@ jobs:
           - windows
           - linux
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
+          # - receiver-0
+          # - receiver-1
+          # - receiver-2
+          # - receiver-3
           - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
-          - other
+          # - processor-1
+          # - exporter-0
+          # - exporter-1
+          # - exporter-2
+          # - exporter-3
+          # - extension
+          # - connector
+          # - internal
+          # - pkg
+          # - cmd-0
+          # - cmd-1
+          # - other
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
@@ -136,22 +136,22 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
+          # - receiver-0
+          # - receiver-1
+          # - receiver-2
+          # - receiver-3
           - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
+          # - processor-1
+          # - exporter-0
+          # - exporter-1
+          # - exporter-2
+          # - exporter-3
+          # - extension
+          # - connector
+          # - internal
+          # - pkg
+          # - cmd-0
+          # - cmd-1
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -256,23 +256,23 @@ jobs:
         go-version: ["1.23.0", "1.21.11"] # 1.20 is interpreted as 1.2 without quotes
         runner: [ubuntu-latest]
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
+          # - receiver-0
+          # - receiver-1
+          # - receiver-2
+          # - receiver-3
           - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
-          - other
+          # - processor-1
+          # - exporter-0
+          # - exporter-1
+          # - exporter-2
+          # - exporter-3
+          # - extension
+          # - connector
+          # - internal
+          # - pkg
+          # - cmd-0
+          # - cmd-1
+          # - other
     runs-on: ${{ matrix.runner }}
     needs: [setup-environment]
     steps:
@@ -347,22 +347,22 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
+          # - receiver-0
+          # - receiver-1
+          # - receiver-2
+          # - receiver-3
           - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
+          # - processor-1
+          # - exporter-0
+          # - exporter-1
+          # - exporter-2
+          # - exporter-3
+          # - extension
+          # - connector
+          # - internal
+          # - pkg
+          # - cmd-0
+          # - cmd-1
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
