--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -68,11 +68,16 @@ jobs:
           - windows
           - linux
         group:
+
           # - receiver-0
           # - receiver-1
           # - receiver-2
           # - receiver-3
-          - processor-0
+          # - processor-0
+          - awsapplicationsignalsprocessor
+          - awsemfexporter
+          - awscwlogs
+          - awsutil
           # - processor-1
           # - exporter-0
           # - exporter-1
@@ -140,7 +145,11 @@ jobs:
           # - receiver-1
           # - receiver-2
           # - receiver-3
-          - processor-0
+          # - processor-0
+          - awsapplicationsignalsprocessor
+          - awsemfexporter
+          - awscwlogs
+          - awsutil
           # - processor-1
           # - exporter-0
           # - exporter-1
