--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -74,10 +74,7 @@ jobs:
           # - receiver-2
           # - receiver-3
           # - processor-0
-          - awsapplicationsignalsprocessor
-          - awsemfexporter
-          - awscwlogs
-          - awsutil
+           - ocb-collector
           # - processor-1
           # - exporter-0
           # - exporter-1
@@ -146,10 +143,7 @@ jobs:
           # - receiver-2
           # - receiver-3
           # - processor-0
-          - awsapplicationsignalsprocessor
-          - awsemfexporter
-          - awscwlogs
-          - awsutil
+          - ocb-collector
           # - processor-1
           # - exporter-0
           # - exporter-1
