--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -263,7 +263,7 @@ jobs:
           # - receiver-1
           # - receiver-2
           # - receiver-3
-          - processor-0
+          - ocb-collector
           # - processor-1
           # - exporter-0
           # - exporter-1
@@ -354,7 +354,7 @@ jobs:
           # - receiver-1
           # - receiver-2
           # - receiver-3
-          - processor-0
+          - ocb-collector
           # - processor-1
           # - exporter-0
           # - exporter-1
