--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -42,13 +42,14 @@ jobs:
       - name: Install Tools
         if: steps.go-cache.outputs.cache-hit != 'true'
         run: make install-tools
-  check-collector-module-version:
-    runs-on: ubuntu-latest
-    needs: [setup-environment]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Check Collector Module Version
-        run: ./.github/workflows/scripts/check-collector-module-version.sh
+  # We only maintain certain modules for OCB collector, this check will fail since other module versions will become outdated due to not being maintained
+  # check-collector-module-version:
+  #   runs-on: ubuntu-latest
+  #   needs: [setup-environment]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Check Collector Module Version
+  #       run: ./.github/workflows/scripts/check-collector-module-version.sh
   check-codeowners:
     runs-on: ubuntu-latest
     needs: [setup-environment]
@@ -68,25 +69,7 @@ jobs:
           - windows
           - linux
         group:
-
-          # - receiver-0
-          # - receiver-1
-          # - receiver-2
-          # - receiver-3
-          # - processor-0
-           - ocb-collector
-          # - processor-1
-          # - exporter-0
-          # - exporter-1
-          # - exporter-2
-          # - exporter-3
-          # - extension
-          # - connector
-          # - internal
-          # - pkg
-          # - cmd-0
-          # - cmd-1
-          # - other
+          - ocb-collector
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
@@ -138,23 +121,7 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          # - receiver-0
-          # - receiver-1
-          # - receiver-2
-          # - receiver-3
-          # - processor-0
           - ocb-collector
-          # - processor-1
-          # - exporter-0
-          # - exporter-1
-          # - exporter-2
-          # - exporter-3
-          # - extension
-          # - connector
-          # - internal
-          # - pkg
-          # - cmd-0
-          # - cmd-1
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -186,7 +153,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -196,6 +163,7 @@ jobs:
           path: |
             ~/go/bin
             ~/go/pkg/mod
+            ./.tools
           key: go-cache-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
       - name: Install dependencies
         if: steps.go-cache.outputs.cache-hit != 'true'
@@ -256,26 +224,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.23.0", "1.21.11"] # 1.20 is interpreted as 1.2 without quotes
+        go-version: ["1.23.0"] # 1.20 is interpreted as 1.2 without quotes
         runner: [ubuntu-latest]
         group:
-          # - receiver-0
-          # - receiver-1
-          # - receiver-2
-          # - receiver-3
           - ocb-collector
-          # - processor-1
-          # - exporter-0
-          # - exporter-1
-          # - exporter-2
-          # - exporter-3
-          # - extension
-          # - connector
-          # - internal
-          # - pkg
-          # - cmd-0
-          # - cmd-1
-          # - other
     runs-on: ${{ matrix.runner }}
     needs: [setup-environment]
     steps:
