--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -70,23 +70,7 @@ jobs:
           - windows
           - linux
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
-          - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
-          - other
+          - ocb-collector
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
@@ -138,22 +122,7 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
-          - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
+          - ocb-collector
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -258,23 +227,7 @@ jobs:
         go-version: ["1.22.5", "1.21.11"] # 1.20 is interpreted as 1.2 without quotes
         runner: [ubuntu-latest]
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
-          - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
-          - other
+          - ocb-collector
     runs-on: ${{ matrix.runner }}
     needs: [setup-environment]
     steps:
@@ -349,22 +302,7 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - receiver-0
-          - receiver-1
-          - receiver-2
-          - receiver-3
-          - processor-0
-          - processor-1
-          - exporter-0
-          - exporter-1
-          - exporter-2
-          - exporter-3
-          - extension
-          - connector
-          - internal
-          - pkg
-          - cmd-0
-          - cmd-1
+          - ocb-collector
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
